--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Contraction</string>
+    <string name="duration">DURATION: %1$d m %2$d s</string>
 </resources>
