--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
     <string name="app_name">Contraction</string>
     <string name="duration">DURATION: %1$d m %2$d s</string>
     <string name="between">BETWEEN: %1$d m %2$d s</string>
-    <string name="contraction">CONTRACTION</string>
     <string name="start">START</string>
     <string name="stop">STOP</string>
     <string name="restart">RESTART</string>
@@ -11,7 +10,7 @@
     <string name="hospital_info">About contractions</string>
     <string name="app_info">About this app</string>
     <string name="ok">OK</string>
-    <string name="hospital">You have to go to hospital when contractions are strong and appears...</string>
+    <string name="hospital">You have to go to hospital when contractions are strong and appears</string>
 
 
 </resources>
